lustre/llite/llite_lib.c
@@ -1216,6 +1216,8 @@ int ll_fill_super(struct super_block *sb)
 	CDEBUG(D_VFSTRACE, "VFS Op: cfg_instance %s-%016lx (sb %p)\n",
 	       profilenm, cfg_instance, sb);
 
+	OBD_RACE(OBD_FAIL_LLITE_RACE_MOUNT);
+
 	OBD_ALLOC_PTR(cfg);
 	if (cfg == NULL)
 		GOTO(out_free_cfg, err = -ENOMEM);
